--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aigameclient",
+  "name": "hooked-nodejs-server",
   "description": "A package using naive versioning",
   "author": "",
   "scripts": {
